--- a/applications/primo/styles-imports/_result-tab-details.scss
+++ b/applications/primo/styles-imports/_result-tab-details.scss
@@ -1,5 +1,11 @@
 /*-- Style item details tab as "table" --*/
 
+/* Fix result list jumping issue */
+.EXLDetailsTabContent div.EXLDetailsContent{
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+}
+
 /* Make sure labels align with associated data */
 .EXLDetailsTabContent div.EXLDetailsContent li {
   clear: both;
